--- a/.github/workflows/main_techbuy-webapp.yml
+++ b/.github/workflows/main_techbuy-webapp.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - techbuy-webapp
+name: Build and deploy Laravel app to Azure Web App - techbuy-webapp
 
 on:
   push:
@@ -13,46 +13,53 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+          extensions: mbstring, bcmath, intl, pdo_pgsql, curl
 
-      - name: Check if composer.json exists
-        id: check_files
-        uses: andstor/file-existence-action@v1
+      - name: Install Composer dependencies
+        run: composer install --no-dev --optimize-autoloader --prefer-dist --no-progress
+
+      - name: Set Laravel permissions
+        run: chmod -R 775 storage bootstrap/cache
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          files: 'composer.json'
+          node-version: '18'
 
-      - name: Run composer install if composer.json exists
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
-
+      - name: Install NPM packages and build assets
+        run: |
+          npm ci
+          npm run build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: php-app
+          name: laravel-app
           path: .
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # Required for requesting the JWT
+      contents: read  # Required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: php-app
-      
+          name: laravel-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -60,11 +67,14 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_175E4E055C434C79B8DDC1982C8FA4A9 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5DF7C74F9484387B0ED5831DAE33362 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Wait before deploy (avoid SCM restart conflicts)
+        run: sleep 20
+
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'techbuy-webapp'
           slot-name: 'Production'
           package: .
-          
+          clean: true
