Restore and update Azure deployment workflow

--- a/.github/workflows/main_techbuy-webapp.yml
+++ b/.github/workflows/main_techbuy-webapp.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install NPM packages and build assets
         run: |
-          npm ci
+          npm install
           npm run build
 
       - name: Upload artifact for deployment job
