Implement root deployment solution for Azure - move public assets to root and update routing

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
-RewriteEngine on
-RewriteCond %{REQUEST_URI} !^public
-RewriteRule ^(.*)$ public/$1 [L]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Handle Laravel routes from root
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ index.php [L,QSA]
+</IfModule>
+
+DirectoryIndex index.php
