fix: Enhanced Azure routing with comprehensive web.config and debugging
🎯 Key fixes for Azure App Service routing:
- Enhanced web.config with proper Laravel route handling
- Improved index.php with better request processing
- Added debug-routing.php for troubleshooting
- Fixed static file handling and HTTPS enforcement
- Added PHP FastCGI configuration for Azure

🔧 Technical improvements:
- URL rewrite rules optimized for Azure nginx
- Better environment detection in index.php
- Debug logging for route resolution
- Comprehensive error handling

--- a/web.config
+++ b/web.config
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.webServer>
+        <!-- Enable URL Rewriting -->
         <rewrite>
             <rules>
-                <!-- Handle static files -->
+                <!-- Force HTTPS -->
+                <rule name="Force HTTPS" enabled="true" stopProcessing="true">
+                    <match url="(.*)" ignoreCase="false" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="off" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" 
+                            appendQueryString="true" redirectType="Permanent" />
+                </rule>
+
+                <!-- Handle static files first -->
                 <rule name="Static Files" stopProcessing="true">
-                    <match url="^(build/.*|storage/.*|.*\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot))$" />
+                    <match url="^(build/.*|storage/.*|livewire/.*|css/.*|js/.*|images/.*|.*\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|pdf|txt|xml))$" />
                     <action type="None" />
                 </rule>
 
-                <!-- Laravel Front Controller -->
-                <rule name="Laravel Front Controller" stopProcessing="true">
+                <!-- Handle Laravel routes -->
+                <rule name="Laravel Routes" stopProcessing="true">
                     <match url="^(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                        <add input="{REQUEST_URI}" pattern="^/(debug-routing\.php|mongodb-status\.php|check-mongodb\.php)$" negate="true" />
                     </conditions>
-                    <action type="Rewrite" url="index.php" appendQueryString="true" />
+                    <action type="Rewrite" url="index.php/{R:1}" appendQueryString="true" />
+                </rule>
+
+                <!-- Fallback rule for root -->
+                <rule name="Root Fallback" stopProcessing="true">
+                    <match url="^$" />
+                    <action type="Rewrite" url="index.php" />
                 </rule>
             </rules>
         </rewrite>
@@ -29,13 +47,38 @@
             </files>
         </defaultDocument>
 
+        <!-- Enable detailed errors for debugging -->
+        <httpErrors existingResponse="PassThrough" />
+
         <!-- Security headers -->
         <httpProtocol>
             <customHeaders>
                 <add name="X-Content-Type-Options" value="nosniff" />
                 <add name="X-XSS-Protection" value="1; mode=block" />
                 <add name="X-Frame-Options" value="SAMEORIGIN" />
+                <add name="Referrer-Policy" value="strict-origin-when-cross-origin" />
             </customHeaders>
         </httpProtocol>
+
+        <!-- Handle PHP files -->
+        <handlers>
+            <add name="PHP via FastCGI" 
+                 path="*.php" 
+                 verb="GET,HEAD,POST,PUT,DELETE,PATCH,OPTIONS" 
+                 modules="FastCgiModule" 
+                 scriptProcessor="C:\Program Files\PHP\v8.2\php-cgi.exe" 
+                 resourceType="Either" 
+                 requireAccess="Script" />
+        </handlers>
+
+        <!-- FastCGI settings -->
+        <fastCgi>
+            <application fullPath="C:\Program Files\PHP\v8.2\php-cgi.exe">
+                <environmentVariables>
+                    <add name="PHPRC" value="C:\Program Files\PHP\v8.2" />
+                    <add name="PHP_FCGI_MAX_REQUESTS" value="10000" />
+                </environmentVariables>
+            </application>
+        </fastCgi>
     </system.webServer>
 </configuration>
