--- a/web.config
+++ b/web.config
@@ -28,7 +28,7 @@
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                         <add input="{REQUEST_URI}" pattern="^/(debug-routing\.php|mongodb-status\.php|check-mongodb\.php)$" negate="true" />
                     </conditions>
-                    <action type="Rewrite" url="index.php/{R:1}" appendQueryString="true" />
+                    <action type="Rewrite" url="index.php" appendQueryString="true" />
                 </rule>
 
                 <!-- Fallback rule for root -->
