--- a/nginx.conf
+++ b/nginx.conf
@@ -69,8 +69,9 @@ server {
         try_files $uri /index.php?$query_string;
     }
 
-    # Storage files (Laravel storage symlink)
+    # Storage files (Laravel storage symlink) - Azure persistent storage
     location ^~ /storage/ {
+        alias /home/LogFiles/storage/;
         expires 1d;
         add_header Cache-Control "public";
         try_files $uri =404;
